# meo-mcp

./: .env.example  .gitignore  .woodpecker.yml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/skills/meo-mcp/: SKILL.md  reference.md
.agents/skills/meo-mcp/agents/: openai.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 20260717_0001_initial.py
docs/: architecture.md  clients.md  deployment.md  development.md  errors.md  oauth.md  release.md  security.md  tools.md
nginx/: mcp-dev.meo-mai-moi.com.conf  mcp.meo-mai-moi.com.conf
src/meo_mcp/: __init__.py  config.py  database.py  main.py  meo_api.py  oauth.py  security.py
tests/: test_documentation.py  test_http.py  test_meo_api.py  test_oauth.py  test_oauth_callback.py  test_phase1a_tools.py  test_phase1b_tools.py  test_phase2a_tools.py  test_phase2b_tools.py  test_phase3a_tools.py  test_phase3b_tools.py  test_phase4a_tools.py  test_phase4b1_tools.py  test_phase4b2_tools.py  test_phase4b3_tools.py  test_phase5a_tools.py  test_phase5b_tools.py  test_phase5c_tools.py  test_security.py
todo/: 00-mvp-stabilization.md  01-mcp-feature-coverage.md  02-documentation.md  03-agent-skill.md  04-prod-and-hardening.md  06-vaccination-overdue-semantics.md  07-openclaw-direct-mcp-call.md  README.md
todo/done/: 00-mvp-stabilization.md  01-mcp-feature-coverage.md  02-documentation.md  03-agent-skill.md  04-prod-and-hardening.md  05-agent-authorization-ux.md  06-vaccination-overdue-semantics.md  README.md
utils/: deploy-ci.sh
