[project]
name = "meo-mcp"
version = "0.1.1"
description = "Protocol-independent agent gateway for Meo Mai Moi"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "cryptography>=44,<47",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mcp>=1.28.1,<2",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=25,<26",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<8",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
meo-mcp = "meo_mcp.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I", "UP", "B", "SIM", "RUF"]
